--- a/Site/Web-data-viz/public/dash.HTML
+++ b/Site/Web-data-viz/public/dash.HTML
@@ -6,6 +6,7 @@
     <title><Chat class="Chart.js"></Chat></title>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="./assets/icon/fmt-logo.png" type="image/png">
 </head>
 <body>
     <div class="chart-container">
