--- a/Site/Web-data-viz/public/dashboard.HTML
+++ b/Site/Web-data-viz/public/dashboard.HTML
@@ -7,6 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="./js/grafico.js"></script>
     <link rel="stylesheet" href="./css/dash.css">
+    <link rel="icon" href="./assets/icon/fmt-logo.png" type="image/png">
 </head>
 
 <body>
