--- a/Site/Web-data-viz/public/formulario.HTML
+++ b/Site/Web-data-viz/public/formulario.HTML
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Monitamento Diário</title>
         <link rel="stylesheet" href="./css/formulario.css">
+        <link rel="icon" href="./assets/icon/fmt-logo.png" type="image/png">
 </head>
 <body>
     <div class="box-formulario">
