--- a/Site/Web-data-viz/public/lifestyle.HTML
+++ b/Site/Web-data-viz/public/lifestyle.HTML
@@ -7,12 +7,13 @@
     <link rel="stylesheet" href="css/cabecalho.css">
     <link rel="stylesheet" href="css/sobre.css">
     <link rel="stylesheet" href="css/lifestyle.css">
+    <link rel="icon" href="./assets/icon/fmt-logo.png" type="image/png">
 </head>
 <body>
      <header>
     <div class="logo">PHOS</div>
     <nav>
-        <a href="home.HTML">HOME</a>
+        <a href="index.html">HOME</a>
         <a href="sobre.html">QUEM SOMOS</a>
         <a href="lifestyle.HTML">LIFESTYLE</a>
         <a href="cadastro.html">PARTICIPE</a>
@@ -44,3 +45,8 @@
  </main>
 </body>
 </html>
+
+<script>
+function faca(){
+  window.location.href = "./cadastro.html";}
+</script>
