--- a/Site/Web-data-viz/public/login.html
+++ b/Site/Web-data-viz/public/login.html
@@ -11,11 +11,9 @@
     <script src="./js/sessao.js"></script>
 
     <link rel="stylesheet" href="./css/estilo.css">
-     <link rel="stylesheet" href="login.css">
-    <!-- <link rel="icon" href="./assets/icon/favicon2.ico"> -->
-    <!-- <link rel="preconnect" href="https://fonts.gstatic.com"> -->
-    <link rel="stylesheet" href="../public/css/login.css">
+     <link rel="stylesheet" href="./css/login.css">
     <link rel="stylesheet" href="css/cabecalho.css">
+    <link rel="icon" href="./assets/icon/fmt-logo.png" type="image/png">
 </head>
 
 <body>
@@ -67,7 +65,7 @@
     <div class="cadastro">
         <div class="form-cadastro">
             <div class="cadastro-logo">
-                <img src="logo phos" alt="Logo PHOS"></div>
+                <img src="./assets/icon/fmt-lampião.png" alt="Logo PHOS"></div>
                 <h2 class="cadastro-titulo">Cadastrar</h2>
 
                 <!-- <label for="input_nome">Nome</label>
@@ -84,7 +82,7 @@
                  <input type="text" id="confirmacao_senha_input" placeholder="Confirme a senha"> -->
                  <div id="div_erros_login"></div>
 
-                    <button class="botao" onclick="entrar()">Entrar</button>
+                    <button id="botao" onclick="entrar()">Entrar</button>
 
                                     <div id="div_aguardar" class="loading-div">
                     <img src="./assets/circle-loading.gif" id="loading-gif">
