--- a/Site/Web-data-viz/public/index.html
+++ b/Site/Web-data-viz/public/index.html
@@ -6,12 +6,13 @@
     <title>Home | PHOS</title>
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/cabecalho.css">
+    <link rel="icon" href="./assets/icon/fmt-logo.png" type="image/png">
 </head>
 <body>
      <header>
     <div class="logo">PHOS</div>
     <nav>
-        <a href="home.HTML">HOME</a>
+        <a href="index.html">HOME</a>
         <a href="sobre.html">QUEM SOMOS</a>
         <a href="lifestyle.HTML">LIFESTYLE</a>
         <a href="cadastro.html">PARTICIPE</a>
@@ -64,12 +65,13 @@ pode mudar o dia — ou a vida — de alguém.</p>
     <div class="home3-carrosel">
       <!-- <div class="home3-carrosel-voltar"></div> -->
       <div class="home3-carrosel-imagem">
-        <img src="./assets/imagem/fmt-acao1.png" alt="agua-farol">
-        <img src="./assets/imagem/fmt-acao2.png" alt="agua-farol">
-        <img src="./assets/imagem/fmt-acao3.png" alt="agua-farol">
-        <img src="./assets/imagem/fmt-acao3.png" alt="agua-farol">
+        <div class="contener" id="img">
+        <img src="./assets/imagem/fmt-img1.png" alt="imagem1">
+        <img src="./assets/imagem/fmt-img2.png" alt="imagem2">
+        <img src="./assets/imagem/fmt-acao3.png" alt="imagem3">
+        <img src="./assets/imagem/fmt-acao4.png" alt="imagem4">
         <img src="" alt="">
-      </div>
+      </div></div>
       <!-- <div class="home3-carrosel-passar"></div> -->
     </div>
 </div>
@@ -77,3 +79,5 @@ pode mudar o dia — ou a vida — de alguém.</p>
  </main>
 </body>
 </html>
+
+<script src="./js/home.js"></script>
