--- a/Site/Web-data-viz/public/sobre.html
+++ b/Site/Web-data-viz/public/sobre.html
@@ -6,12 +6,13 @@
     <title>Home | PHOS</title>
     <link rel="stylesheet" href="css/cabecalho.css">
     <link rel="stylesheet" href="css/sobre.css">
+    <link rel="icon" href="./assets/icon/fmt-logo.png" type="image/png">
 </head>
 <body>
      <header>
     <div class="logo">PHOS</div>
     <nav>
-        <a href="home.HTML">HOME</a>
+        <a href="index.html">HOME</a>
         <a href="sobre.html">QUEM SOMOS</a>
         <a href="lifestyle.HTML">LIFESTYLE</a>
         <a href="cadastro.html">PARTICIPE</a>
