--- a/Site/Web-data-viz/public/index.html
+++ b/Site/Web-data-viz/public/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home | PHOS</title>
-    <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/cabecalho.css">
+    <link rel="stylesheet" href="css/home.css">
     <link rel="icon" href="./assets/icon/fmt-logo.png" type="image/png">
 </head>
 <body>
@@ -63,19 +63,22 @@ pode mudar o dia — ou a vida — de alguém.</p>
     <p class="home2-titulo">AÇÕES FEITAS</p>
     </div>
     <div class="home3-carrosel">
-      <!-- <div class="home3-carrosel-voltar"></div> -->
-      <div class="home3-carrosel-imagem">
-        <div class="contener" id="img">
-        <img src="./assets/imagem/fmt-img1.png" alt="imagem1">
-        <img src="./assets/imagem/fmt-img2.png" alt="imagem2">
-        <img src="./assets/imagem/fmt-acao3.png" alt="imagem3">
-        <img src="./assets/imagem/fmt-acao4.png" alt="imagem4">
-        <img src="" alt="">
-      </div></div>
-      <!-- <div class="home3-carrosel-passar"></div> -->
+      <div class="home3-carrosel-voltar"></div>
+          <div class="carrosel">
+        <div class="conteiner">
+            <img src="./assets/imagem/fmt-marrom.png" alt="">
+            <img src="./assets/imagem/fmt-acao2.png" alt="">
+            <img src="./assets/imagem/fmt-acao3.png" alt="">
+            <img src="./assets/imagem/fmt-acao4.png" alt="">
+            <img src="./assets/imagem/fmt-acao1.png" alt="">
+        </div>
+     </div>
+      <div class="home3-carrosel-passar"></div>
     </div>
 </div>
      <!-- Fim terceira tela -->
+
+
  </main>
 </body>
 </html>
