--- a/Site/Web-data-viz/public/dashboard.HTML
+++ b/Site/Web-data-viz/public/dashboard.HTML
@@ -29,7 +29,7 @@
     <div class="linha-indicadores">
         <div class="boxiindicadores1">
             <div class="titulo_indicadores">
-        Tem se sentido</div>
+        Sentimento Predominante</div>
            <div id="indicador1"></div>
         </div>
     
